# push_swap

./: CMakeLists.txt  Makefile  main.c  test.sh
checkerdir/: checker.c  checker_oper_1.c  checker_oper_2.c
deque/: deque_1.c  deque_2.c
includes/: checker.h  libft.h  push_swap.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+4 more)
operation/: rotate_n_reverse.c  swap_n_push.c
parser/: parse.c  parsing_utils.c
sorting/: push_swap.c  sort_big.c  sort_big_pos.c  sort_gets.c  sort_shorts.c  sort_utils.c
utils/: lis.c  merge_sort.c  utils.c  utils_2.c
